--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,8 @@
-@import './common.scss';
+@import "./common.scss";
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity .3s;
+  transition: opacity 0.3s;
 }
 
 .page-enter,
